        removed.

      - ZGadyFlyDA/Gadfly is deprecated

      - deprecated OFS.content_types (to be removed in Zope 2.11) and
        replaced all occurences with zope.app.content_types

      - OFS.content_types: moved code to zope.app.content_types and added
        method aliases

      - Using FastCGI is offically deprecated.

    Features added

      - Included Zope 3.3 and corresponding Five 1.5 release.

      - There is now a default favicon.ico.

      - Experimental WSGI and Twisted support for http.
        Zope now has a WSGI interface for integration with other
        web-servers than ZServer. Most notably Twisted is supported.
        The WSGI application is ZPublisher.WSGIPublisher.publish_module

        You can make ZServer use the twisted interface with the
        "use-wsgi on" keyword in the http-server section in zope.conf.

        You can run Twisted by installing Twisted (2.1 recommended) and
        replacing the http-server section with a server section in
        zope.conf. It is not possible to run a Twisted server together with
        a ZServer at the same time.

          <server>
            address 8080
            type Zope2-HTTP
          </server>

        WSGI: http://www.python.org/dev/peps/pep-0333/
        Twisted: http://twistedmatrix.com/

      - The traversal has been refactored to take heed of Zope3s
        IPublishTraverse adapter interfaces. The ZCML directives
        five:traversable and five:defaultViewable are therefore no
        longer needed, as everything now is five:traversable and
        five:defaultViewable.

        There was a bug in earlier versions of Five that allowed you
        to do custom publishing traversal with ITraversable adapters.
        This bug has been corrected. Anybody using ITraversable
        adapters need to convert them to IPublishTraversal adapters.

      - Testing.makerequest: Added an 'environ' argument so
        clients can use mappings other than os.environ.
